# CogArch

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
cli/: __init__.py  main.py
config/: default.yaml
data/: .gitkeep
data/benchmarks/: causal_reasoning.jsonl  gsm8k.jsonl  knowledge_qa.jsonl  logic_puzzles.jsonl  math_reasoning.jsonl  sample.jsonl  truthfulqa.jsonl
docs/: PARALLEL_COGNITIVE_ARCHITECTURE_SPEC.md
prompts/coordinator/: synthesis.yaml
prompts/specialists/: code_creative.yaml  code_empathetic.yaml  code_logical.yaml  code_skeptical.yaml  creative.yaml  empathetic.yaml  logical.yaml  skeptical.yaml
scripts/: download_datasets.py
src/: __init__.py  config.py
src/api/: __init__.py
src/eval/: __init__.py  code_experiment.py  experiment.py  metrics.py  scorer.py  splitter.py
src/eval/benchmarks/: __init__.py  base.py  gsm8k.py  humaneval.py  jsonl_benchmark.py  mbpp.py  mmlu.py  truthfulqa.py
src/execution/: code_runner.py
src/inference/: __init__.py  code_orchestrator.py  code_specialist.py  coordinator.py  orchestrator.py  specialist.py
src/inference/backends/: base.py  (+3 more)
src/memory/: __init__.py  consolidator.py  controller.py  embedder.py  episodic.py  experience_log.py  models.py  semantic.py  working.py
src/models/: __init__.py  benchmark.py  code.py  coordinator.py  experiment.py  interaction.py  specialist.py
src/training/: __init__.py  code_competitive.py  code_dataset_builder.py  competitive.py  curator.py  dataset_builder.py  fine_tuner.py  finetuner.py  model_registry.py  sleep_cycle.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_benchmark.py  test_benchmark_loaders.py  test_code_dataset_builder.py  test_code_models.py  test_code_runner.py  test_config.py  test_curator.py  test_dataset_builder.py  test_experience_log.py  test_experiment.py  test_fine_tuner.py  test_memory_consolidator.py  test_memory_embedder.py  test_memory_episodic.py  test_memory_models.py  test_memory_semantic.py  test_memory_working.py  test_metrics.py  test_models.py  test_scorer.py  test_sleep_cycle.py  test_splitter.py
(+1 files in other folders)
